# rustymailer

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  spec.yaml
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
