[package]
name = "rustymailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustymailer"

[dependencies]
actix-web = "4.5.1"
reqwest = "0.11.24"

[dev-dependencies]
actix-rt = "2.9.0"
tokio = "1.36.0"
