[package]
name = "rustymailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustymailer"

[dependencies]
actix-web = "4.5.1"
config = "0.14.0"
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["derive"] }
serde-aux = "4.4.0"
sqlx = { version = "0.7.3", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
uuid = { version = "1.6.1", features = ["v4"] }
[dev-dependencies]
actix-rt = "2.9.0"
once_cell = "1.19.0"
tokio = "1.36.0"
tracing = { version = "0.1.40", features = ["log"] }
